--- a/po/lt.po
+++ b/po/lt.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.29.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2010-07-16 00:50+0300\n"
 "Last-Translator: Žygimantas Beručka <uid0@akl.lt>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
@@ -1007,6 +1007,10 @@ msgstr "reikalauti galimybių"
 
 msgid "force caps without doing a typefind"
 msgstr "priverstinai naudoti galimybes neatliekant tipo paieškos"
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "Sraute nėra duomenų."
 
 msgid "Stream contains no data."
 msgstr "Sraute nėra duomenų."
