--- a/po/ca.po
+++ b/po/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.30.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2010-11-04 19:41+0100\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <ca@dodds.net>\n"
@@ -1012,6 +1012,10 @@ msgstr "força les capacitats"
 
 msgid "force caps without doing a typefind"
 msgstr "força les capacitats sense fer un «typefind»"
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "El flux no conté dades."
 
 msgid "Stream contains no data."
 msgstr "El flux no conté dades."
