--- a/po/eu.po
+++ b/po/eu.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer-0.10.26.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2010-03-25 13:10+0100\n"
 "Last-Translator: Mikel Olasagasti Uranga <hey_neken@mundurat.net>\n"
 "Language-Team: Basque <translation-team-eu@lists.sourceforge.net>\n"
@@ -1014,6 +1014,10 @@ msgstr "derrigortu gaitasunak"
 
 msgid "force caps without doing a typefind"
 msgstr "derrigortu gaitasunak motaren bilaketa landu gabe"
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "Korronteak ez du daturik."
 
 msgid "Stream contains no data."
 msgstr "Korronteak ez du daturik."
