--- a/po/fi.po
+++ b/po/fi.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.30.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2010-11-17 23:10+0200\n"
 "Last-Translator: Tommi Vainikainen <Tommi.Vainikainen@iki.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
@@ -1010,6 +1010,10 @@ msgstr "pakota kyvyt"
 
 msgid "force caps without doing a typefind"
 msgstr "pakota kyvyt ilman tyyppihakua"
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "Virta on tyhjä."
 
 msgid "Stream contains no data."
 msgstr "Virta on tyhjä."
