--- a/po/gl.po
+++ b/po/gl.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 1.0.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2012-12-15 03:29+0200\n"
 "Last-Translator: Fran Dieguez <frandieguez@ubuntu.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -1003,6 +1003,10 @@ msgstr "forzar as capacidades"
 
 msgid "force caps without doing a typefind"
 msgstr "forzar as capacidades sen facer un «typefind»"
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "O fluxo non contén datos."
 
 msgid "Stream contains no data."
 msgstr "O fluxo non contén datos."
