--- a/po/it.po
+++ b/po/it.po
@@ -106,7 +106,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.30.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2010-10-25 10:03+0200\n"
 "Last-Translator: Luca Ferretti <elle.uca@infinito.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
@@ -1162,6 +1162,10 @@ msgstr "forza i caps"
 
 msgid "force caps without doing a typefind"
 msgstr "forza i caps senza eseguire un typefind"
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "Lo stream non contiene dati."
 
 msgid "Stream contains no data."
 msgstr "Lo stream non contiene dati."
