--- a/po/nb.po
+++ b/po/nb.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.30.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2010-10-24 21:36+0200\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian Bokmaal <i18n-nb@lister.ping.uio.no>\n"
@@ -971,6 +971,10 @@ msgstr ""
 
 msgid "force caps without doing a typefind"
 msgstr ""
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "Strømmen inneholder ikke data."
 
 msgid "Stream contains no data."
 msgstr "Strømmen inneholder ikke data."
