--- a/po/pl.po
+++ b/po/pl.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 1.3.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2014-05-22 18:22+0200\n"
 "Last-Translator: Jakub Bogusz <qboosh@pld-linux.org>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
@@ -1003,6 +1003,10 @@ msgstr "wymuszenie możliwości"
 
 msgid "force caps without doing a typefind"
 msgstr "wymuszenie możliwości bez sprawdzania"
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "Strumień nie zawiera danych."
 
 msgid "Stream contains no data."
 msgstr "Strumień nie zawiera danych."
