--- a/po/ro.po
+++ b/po/ro.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.29.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2010-08-16 01:10+0300\n"
 "Last-Translator: Lucian Adrian Grijincu <lucian.grijincu@gmail.com>\n"
 "Language-Team: Romanian <translation-team-ro@lists.sourceforge.net>\n"
@@ -1025,6 +1025,10 @@ msgstr "forțează caps"
 
 msgid "force caps without doing a typefind"
 msgstr "forțează caps fără a efectua un typefind"
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "Fluxul nu conține date."
 
 msgid "Stream contains no data."
 msgstr "Fluxul nu conține date."
