--- a/po/ru.po
+++ b/po/ru.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 1.3.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2014-05-22 20:12+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <gnu@mx.ru>\n"
@@ -1002,6 +1002,10 @@ msgstr "форсировать возможности"
 
 msgid "force caps without doing a typefind"
 msgstr "форсировать возможности без выполнения typefind"
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "Поток не содержит данных."
 
 msgid "Stream contains no data."
 msgstr "Поток не содержит данных."
