--- a/po/sq.po
+++ b/po/sq.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.8.4\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2004-08-07 23:46+0200\n"
 "Last-Translator: Laurent Dhima <laurenti@alblinux.net>\n"
 "Language-Team: Albanian <begraj@hotmail.com>\n"
@@ -1019,6 +1019,10 @@ msgstr ""
 
 msgid "force caps without doing a typefind"
 msgstr ""
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "albumi që përmban këtë të dhënë"
 
 #, fuzzy
 msgid "Stream contains no data."
