--- a/po/sr.po
+++ b/po/sr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer-1.3.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2014-06-18 20:12+0200\n"
 "Last-Translator: Мирослав Николић <miroslavnikolic@rocketmail.com>\n"
 "Language-Team: Serbian <(nothing)>\n"
@@ -1002,6 +1002,10 @@ msgstr "приморај могућности"
 
 msgid "force caps without doing a typefind"
 msgstr "приморај могућности без обављања претраге уписа"
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "Овај ток не садржи податке."
 
 msgid "Stream contains no data."
 msgstr "Овај ток не садржи податке."
