--- a/po/sv.po
+++ b/po/sv.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 1.3.90\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2014-07-11 02:52+0200\n"
 "Last-Translator: Sebastian Rasmussen <sebras@gmail.com>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
@@ -1000,6 +1000,10 @@ msgstr "tvinga förmågor"
 
 msgid "force caps without doing a typefind"
 msgstr "tvinga förmågor utan att göra en typefind"
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "Strömmen innehåller inget data."
 
 msgid "Stream contains no data."
 msgstr "Strömmen innehåller inget data."
