--- a/po/uk.po
+++ b/po/uk.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 1.3.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2014-05-22 07:45+0300\n"
 "Last-Translator: Yuri Chornoivan <yurchor@ukr.net>\n"
 "Language-Team: Ukrainian <translation-team-uk@lists.sourceforge.net>\n"
@@ -999,6 +999,10 @@ msgstr "примусово визначені можливості"
 
 msgid "force caps without doing a typefind"
 msgstr "примусово визначити можливості без виконання typefind"
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "Потік не містить даних."
 
 msgid "Stream contains no data."
 msgstr "Потік не містить даних."
