--- a/po/vi.po
+++ b/po/vi.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 1.3.90\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2014-06-30 09:40+0700\n"
 "Last-Translator: Trần Ngọc Quân <vnwildman@gmail.com>\n"
 "Language-Team: Vietnamese <translation-team-vi@lists.sourceforge.net>\n"
@@ -1009,6 +1009,10 @@ msgstr "buộc khả năng"
 
 msgid "force caps without doing a typefind"
 msgstr "buộc các khả năng mà không tìm kiểu"
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "Luồng không chứa dữ liệu."
 
 msgid "Stream contains no data."
 msgstr "Luồng không chứa dữ liệu."
