--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -27,7 +27,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 1.3.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-12-16 15:36+0000\n"
+"POT-Creation-Date: 2015-06-07 09:28+0200\n"
 "PO-Revision-Date: 2014-06-08 00:22+0800\n"
 "Last-Translator: Wen Liao <wen.cf83@gmail.com>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
@@ -995,6 +995,10 @@ msgstr "強迫caps"
 
 msgid "force caps without doing a typefind"
 msgstr "不尋找型態，直些強迫caps"
+
+#, fuzzy
+msgid "Stream contains not enough data."
+msgstr "資料串流中沒有資料"
 
 msgid "Stream contains no data."
 msgstr "資料串流中沒有資料"
