--- a/po/cs.po
+++ b/po/cs.po
@@ -4,14 +4,14 @@
 #
 # Miloslav Trmac <mitr@volny.cz>, 2004.
 # Petr Kovar <pknbe@volny.cz>, 2007, 2008, 2009, 2010, 2011.
-# Marek Černocký <marek@manet.cz>, 2013, 2014.
+# Marek Černocký <marek@manet.cz>, 2013, 2014, 2015.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base-1.2.1\n"
+"Project-Id-Version: gst-plugins-base-1.4.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-05-24 18:47+0100\n"
-"PO-Revision-Date: 2014-03-09 12:37+0100\n"
+"POT-Creation-Date: 2015-06-07 09:34+0200\n"
+"PO-Revision-Date: 2015-02-16 10:33+0100\n"
 "Last-Translator: Marek Černocký <marek@manet.cz>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
 "Language: cs\n"
@@ -516,22 +516,24 @@ msgid ""
 "Don't exit after showing the initial device list, but wait for devices to "
 "added/removed."
 msgstr ""
+"Po zobrazení počátečního seznamu zařízení neskončit, ale ček na přidání/"
+"odebrání zařízení."
 
-#, c-format
+#, fuzzy, c-format
 msgid "Volume: %.0f%%"
-msgstr ""
+msgstr "Hlasitost"
 
 msgid "Buffering..."
 msgstr "Ukládá se do vyrovnávací paměti…"
 
 msgid "Clock lost, selecting a new one\n"
-msgstr ""
+msgstr "Bylo ztraceno časování, vybírá se nové\n"
 
 msgid "Reached end of play list."
 msgstr ""
 
 #, c-format
-msgid "Now playing %s"
+msgid "Now playing %s\n"
 msgstr ""
 
 #, c-format
@@ -570,8 +572,9 @@ msgstr ""
 msgid "seek backward"
 msgstr ""
 
+#, fuzzy
 msgid "volume up"
-msgstr ""
+msgstr "Hlasitost"
 
 msgid "volume down"
 msgstr ""
@@ -591,8 +594,9 @@ msgstr ""
 msgid "show keyboard shortcuts"
 msgstr ""
 
+#, fuzzy
 msgid "Interactive mode - keyboard controls:"
-msgstr ""
+msgstr "Interaktivní ovládání přes klávesnici"
 
 msgid "Video sink to use (default is autovideosink)"
 msgstr "Spotřebič videa, který se má použít (výchozí je autovideosink)"
@@ -604,16 +608,17 @@ msgid "Enable gapless playback"
 msgstr "Zapnout přehrávání bez mezer"
 
 msgid "Shuffle playlist"
-msgstr ""
+msgstr "Náhodně zamíchat seznam k přehrání"
 
+#, fuzzy
 msgid "Disable interactive control via the keyboard"
-msgstr ""
+msgstr "Interaktivní ovládání přes klávesnici"
 
 msgid "Volume"
-msgstr ""
+msgstr "Hlasitost"
 
 msgid "Playlist file containing input media files"
-msgstr ""
+msgstr "Soubor se seznamem k přehrání obsahující vstupní multimediální soubory"
 
 msgid "Do not print any output (apart from errors)"
 msgstr ""
