--- a/po/fr.po
+++ b/po/fr.po
@@ -4,14 +4,15 @@
 #
 # Nicolas Velin <nicolas@velin.fr>, 2008.
 # Claude Paroz <claude@2xlibre.net>, 2008-2011.
+# Stéphane Aulery <lkppo@free.fr>, 2015.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.32.2\n"
+"Project-Id-Version: gst-plugins-base 1.4.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-05-24 18:47+0100\n"
-"PO-Revision-Date: 2011-04-28 09:19+0200\n"
-"Last-Translator: Claude Paroz <claude@2xlibre.net>\n"
+"POT-Creation-Date: 2015-06-07 09:34+0200\n"
+"PO-Revision-Date: 2015-04-26 19:42+0200\n"
+"Last-Translator: Stéphane Aulery <lkppo@free.fr>\n"
 "Language-Team: French <traduc@traduc.org>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -92,9 +93,8 @@ msgstr "Impossible de déterminer le type de flux"
 msgid "This appears to be a text file"
 msgstr "Ce fichier semble être un fichier texte"
 
-#, fuzzy
 msgid "Could not create \"uridecodebin\" element."
-msgstr "Impossible de créer un élément « decodebin »."
+msgstr "Impossible de créer un élément « uridecodebin »."
 
 #, c-format
 msgid "Both autovideosink and %s elements are missing."
@@ -210,19 +210,16 @@ msgid "Timed Text"
 msgstr ""
 
 msgid "Subtitle"
-msgstr ""
+msgstr "Sous-titre"
 
-#, fuzzy
 msgid "MPL2 subtitle format"
-msgstr "Format de sous-titres TMPlayer"
+msgstr "Format de sous-titres MPL2"
 
-#, fuzzy
 msgid "DKS subtitle format"
-msgstr "Format de sous-titres Sami"
+msgstr "Format de sous-titres DKS"
 
-#, fuzzy
 msgid "QTtext subtitle format"
-msgstr "Format de sous-titres Kate"
+msgstr "Format de sous-titres QTtext"
 
 msgid "Sami subtitle format"
 msgstr "Format de sous-titres Sami"
@@ -233,45 +230,42 @@ msgstr "Format de sous-titres TMPlayer"
 msgid "Kate subtitle format"
 msgstr "Format de sous-titres Kate"
 
-#, fuzzy
 msgid "Uncompressed video"
-msgstr "YUV non compressé"
+msgstr "Video non compressée"
 
-#, fuzzy
 msgid "Uncompressed gray"
-msgstr "Image niveaux de gris non compressée"
+msgstr "Niveaux de gris non compressés"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Uncompressed packed YUV %s"
-msgstr "YUV empaqueté 4:2:2 non compressé"
+msgstr "YUV %s empaqueté non compressé"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Uncompressed semi-planar YUV %s"
-msgstr "YUV planaire 4:2:0 non compressé"
+msgstr "YUV semi-planaire %s non compressé"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Uncompressed planar YUV %s"
-msgstr "YUV planaire 4:2:0 non compressé"
+msgstr "YUV planaire %s non compressé"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Uncompressed palettized %d-bit %s"
 msgstr "%2$s %1$d bits en palette non compressé"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Uncompressed %d-bit %s"
-msgstr "%2$s %1$d bits en palette non compressé"
+msgstr "%2$s %1$d bits non compressé"
 
 #, c-format
 msgid "DivX MPEG-4 Version %d"
 msgstr "MPEG-4 DivX version %d"
 
-#, fuzzy
 msgid "Uncompressed audio"
-msgstr "YUV non compressé"
+msgstr "Audio non compressé"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Raw %d-bit %s audio"
-msgstr "Audio PCM brut %d bits"
+msgstr "Audio brut %2$s %1$d bits"
 
 msgid "Audio CD source"
 msgstr "Source CD audio"
@@ -327,7 +321,7 @@ msgstr "Multiplexeur %s"
 
 #, c-format
 msgid "%s encoder"
-msgstr "Codeur %s"
+msgstr "Encodeur %s"
 
 #, c-format
 msgid "GStreamer element %s"
@@ -412,7 +406,7 @@ msgid "Digital zoom ratio used when capturing an image"
 msgstr "Valeur du zoom numérique utilisé lors de la capture de l'image"
 
 msgid "capturing iso speed"
-msgstr "sensibilité iso de la capture"
+msgstr "sensibilité ISO de la capture"
 
 msgid "The ISO speed used when capturing an image"
 msgstr "La sensibilité ISO utilisée lors de la capture de l'image"
@@ -489,7 +483,7 @@ msgid "The selected flash mode while capturing an image"
 msgstr "Le mode de flash sélectionné lors de la capture d'une image"
 
 msgid "capturing metering mode"
-msgstr "mode de msure de la capture"
+msgstr "mode de mesure de la capture"
 
 msgid ""
 "The metering mode used while determining exposure for capturing an image"
@@ -539,12 +533,12 @@ msgid ""
 "added/removed."
 msgstr ""
 
-#, c-format
+#, fuzzy, c-format
 msgid "Volume: %.0f%%"
-msgstr ""
+msgstr "Volume"
 
 msgid "Buffering..."
-msgstr ""
+msgstr "Mise en cache…"
 
 msgid "Clock lost, selecting a new one\n"
 msgstr ""
@@ -553,7 +547,7 @@ msgid "Reached end of play list."
 msgstr ""
 
 #, c-format
-msgid "Now playing %s"
+msgid "Now playing %s\n"
 msgstr ""
 
 #, c-format
@@ -592,8 +586,9 @@ msgstr ""
 msgid "seek backward"
 msgstr ""
 
+#, fuzzy
 msgid "volume up"
-msgstr ""
+msgstr "Volume"
 
 msgid "volume down"
 msgstr ""
@@ -632,7 +627,7 @@ msgid "Disable interactive control via the keyboard"
 msgstr ""
 
 msgid "Volume"
-msgstr ""
+msgstr "Volume"
 
 msgid "Playlist file containing input media files"
 msgstr ""
@@ -642,7 +637,7 @@ msgstr ""
 
 #, c-format
 msgid "Usage: %s FILE1|URI1 [FILE2|URI2] [FILE3|URI3] ..."
-msgstr ""
+msgstr "Usage : %s FICHIER1|URI1 [FICHIER2|URI2] [FICHIER3|URI3] …"
 
 msgid "You must provide at least one filename or URI to play."
 msgstr ""
@@ -653,142 +648,3 @@ msgstr ""
 #~ msgid "A %s plugin is required to play this stream, but not installed."
 #~ msgstr ""
 #~ "Un greffon %s est requis pour lire ce flux, mais il n'est pas installé."
-
-#, fuzzy
-#~ msgid "Uncompressed %s YUV %s"
-#~ msgstr "YUV non compressé"
-
-#~ msgid "Master"
-#~ msgstr "Volume général"
-
-#~ msgid "Bass"
-#~ msgstr "Basses"
-
-#~ msgid "Treble"
-#~ msgstr "Aiguës"
-
-#~ msgid "PCM"
-#~ msgstr "PCM"
-
-#~ msgid "Synth"
-#~ msgstr "Synth"
-
-#~ msgid "Line-in"
-#~ msgstr "Entrée ligne"
-
-#~ msgid "CD"
-#~ msgstr "CD"
-
-#~ msgid "Microphone"
-#~ msgstr "Micro"
-
-#~ msgid "PC Speaker"
-#~ msgstr "Haut-parleur PC"
-
-#~ msgid "Playback"
-#~ msgstr "Lecture"
-
-#~ msgid "Capture"
-#~ msgstr "Enregistrement"
-
-#~ msgid "Connection to %s:%d refused."
-#~ msgstr "Connexion refusée vers %s:%d."
-
-#~ msgid "Uncompressed planar YVU 4:2:0"
-#~ msgstr "YVU planaire 4:2:0 non compressé"
-
-#~ msgid "Uncompressed packed YUV 4:1:0"
-#~ msgstr "YUV empaqueté 4:1:0 non compressé"
-
-#~ msgid "Uncompressed packed YVU 4:1:0"
-#~ msgstr "YVU empaqueté 4:1:0 non compressé"
-
-#~ msgid "Uncompressed packed YUV 4:1:1"
-#~ msgstr "YUV empaqueté 4:1:1 non compressé"
-
-#~ msgid "Uncompressed packed YUV 4:4:4"
-#~ msgstr "YUV empaqueté 4:4:4 non compressé"
-
-#~ msgid "Uncompressed planar YUV 4:2:2"
-#~ msgstr "YUV planaire 4:2:2 non compressé"
-
-#~ msgid "Uncompressed planar YUV 4:1:1"
-#~ msgstr "YUV planaire 4:1:1 non compressé"
-
-#~ msgid "Uncompressed black and white Y-plane"
-#~ msgstr "Plan Y noir et blanc non compressé"
-
-#~ msgid "Raw PCM audio"
-#~ msgstr "Audio PCM brut"
-
-#~ msgid "Raw %d-bit floating-point audio"
-#~ msgstr "Audio brut virgule flottante %d bits"
-
-#~ msgid "Raw floating-point audio"
-#~ msgstr "Audio brut virgule flottante"
-
-#~ msgid "Could not open vfs file \"%s\" for writing: %s."
-#~ msgstr "Impossible d'ouvrir le fichier vfs « %s » en écriture : %s."
-
-#~ msgid "No filename given"
-#~ msgstr "Aucun nom de fichier indiqué"
-
-#~ msgid "Could not close vfs file \"%s\"."
-#~ msgstr "Impossible de fermer le fichier vfs « %s »."
-
-#~ msgid "Error while writing to file \"%s\"."
-#~ msgstr "Erreur lors de l'écriture dans le fichier « %s »."
-
-#~ msgid "Invalid subtitle URI \"%s\", subtitles disabled."
-#~ msgstr ""
-#~ "URI de sous-titres « %s » non valide, les sous-titres sont désactivés."
-
-#~ msgid "RTSP streams cannot be played yet."
-#~ msgstr "Il n'est pas encore possible de lire les flux RTSP."
-
-#~ msgid ""
-#~ "Only a subtitle stream was detected. Either you are loading a subtitle "
-#~ "file or some other type of text file, or the media file was not "
-#~ "recognized."
-#~ msgstr ""
-#~ "Seul un flux de sous-titres a été détecté. Soit vous essayez d'ouvrir un "
-#~ "fichier de sous-titres ou un autre type de fichier texte, soit le fichier "
-#~ "multimédia n'a pas été reconnu."
-
-#~ msgid ""
-#~ "You do not have a decoder installed to handle this file. You might need "
-#~ "to install the necessary plugins."
-#~ msgstr ""
-#~ "Aucun décodeur n'est installé pour gérer ce fichier. Vous devriez "
-#~ "probablement installer des greffons supplémentaires."
-
-#~ msgid "This is not a media file"
-#~ msgstr "Ceci n'est pas un fichier multimédia"
-
-#~ msgid "A subtitle stream was detected, but no video stream."
-#~ msgstr "Un flux de sous-titres a été détecté, mais pas de flux vidéo."
-
-#~ msgid "Both autovideosink and xvimagesink elements are missing."
-#~ msgstr "Les éléments autovideosink et xvimagesink sont tous deux manquants."
-
-#~ msgid "Both autoaudiosink and alsasink elements are missing."
-#~ msgstr "Les éléments autoaudiosink et alsasink sont tous deux manquants."
-
-#~ msgid "No device specified."
-#~ msgstr "Aucun périphérique indiqué."
-
-#~ msgid "Device \"%s\" does not exist."
-#~ msgstr "Le périphérique « %s » n'existe pas."
-
-#~ msgid "Device \"%s\" is already being used."
-#~ msgstr "Le périphérique « %s » est déjà en cours d'utilisation."
-
-#~ msgid "Could not open device \"%s\" for reading and writing."
-#~ msgstr "Impossible d'ouvrir le périphérique « %s » en lecture et écriture."
-
-#~ msgid "Error while sending gdp header data to \"%s:%d\"."
-#~ msgstr "Erreur lors de l'envoi de données d'en-tête gdp vers « %s:%d »."
-
-#~ msgid "Error while sending gdp payload data to \"%s:%d\"."
-#~ msgstr ""
-#~ "Erreur lors de l'envoi de données de charge utile gdp vers « %s:%d »."
